# CrossAuth

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts
.github/workflows/: main.yml
src/: App.tsx  SplashScreen.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ActionsMenu.tsx  CodeItem.tsx  CodesList.tsx  Header.tsx  TimeCircle.tsx
src/components/modals/: AddAccountOptionsModal.tsx  DeleteConfirmModal.tsx  ImportModal.tsx  ManualEntryModal.tsx  PasswordModal.tsx  PasswordPromptModal.tsx  QRScanModal.tsx  SettingsModal.tsx
src/services/: storageService.ts
src/types/: index.ts
src/utils/: authUtils.ts  googleAuthParser.ts
